--- a/2 - Tables/index.html
+++ b/2 - Tables/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,37 +8,217 @@
     <title>Tables</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Quicksand&family=Raleway&display=swap');
-        
-        table{
+
+        body {
+            margin-left: 100px;
+            background-color: #212121;
+            color: white;
+        }
+
+        h1{
+            margin-left: 300px;
+        }
+        table,tr,td,th{
+            margin: auto;
             border: 1px solid black;
             border-collapse: collapse;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .mark{
+            width: 500px;
+            margin: auto;
+            overflow: auto;
+            border: 3px solid white;
         }
     </style>
 </head>
-<body style="font-family: 'PT Sans', sans-serif;">
-    <h1> Tables</h1>
 
+<body style="font-family: 'PT Sans', sans-serif;">
+
+    <!-- Start: Table 1 -->
+    <h1> Table - 1</h1>
     <table>
-        <thead>
-            <th> Head 1</th>
-            <th> Head 2</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td> data 1</td>
-                <td> data 2</td>
-            </tr>
-            <tr>
-                <td> data 1</td>
-                <td> data 2</td>
-            </tr><tr>
-                <td> data 1</td>
-                <td> data 2</td>
-            </tr><tr>
-                <td> data 1</td>
-                <td> data 2</td>
-            </tr>
-        </tbody>
+        <tr>
+            <td rowspan="2" style="background-color: red;"></td>
+            <td colspan="2" style="background-color: yellow;"></td>
+        </tr>
+        <tr>
+            <td style="background-color: #3eacc3;"></td>
+            <td style="background-color: green;"></td>
+        </tr>
+        <tr>
+            <td style="background-color: blue"></td>
+            <td style="background-color: blueviolet;"></td>
+            <td style="background-color: bisque;"></td>
+        </tr>
     </table>
+    <!-- End: Table 1 -->
+
+    <!-- Start: Table 2 -->
+    <h1> Table - 2</h1>
+    <table>
+        <tr>
+            <td colspan="2" style="background-color: aqua;"></td>
+            <td rowspan="3" style="background-color: darkmagenta;"></td>
+        </tr>
+        <tr>
+            <td rowspan="2" style="background-color: chartreuse;"></td>
+            <td style="background-color: teal;"></td>
+        </tr>
+
+    </table>
+    <!-- End : Table 2 -->
+    <br><br><br>
+    <!-- Start: Bank Table  -->
+    <h1> Bank table</h1>
+    <table>
+        <caption> Table 1.0:-Account Details</caption>
+        <th>Sr. No.</th>
+        <th colspan="2">Name</th>
+        <th>Age</th>
+        <th>Bank</th>
+        <th>Account No.</th>
+        <th>Gender</th>
+
+        <tr>
+            <td>1</td>
+            <td>Abhishek</td>
+            <td>Patel</td>
+            <td>22</td>
+            <td>BOB</td>
+            <td>536845</td>
+            <td>Male</td>
+        </tr>
+
+        <tr>
+            <td>2</td>
+            <td>Chirag</td>
+            <td>Patel</td>
+            <td>58</td>
+            <td>BOB</td>
+            <td>785468</td>
+            <td>Female</td>
+        </tr>
+
+        <tr>
+            <td>3</td>
+            <td>Devansh</td>
+            <td>Patel</td>
+            <td>01</td>
+            <td>Kidszee</td>
+            <td>123456</td>
+            <td>Pending</td>
+        </tr>
+
+        <tr>
+            <td>4</td>
+            <td>Priyank</td>
+            <td>Bhodo</td>
+            <td>115</td>
+            <td>Swis Bank</td>
+            <td>1658745</td>
+            <td>Male</td>
+        </tr>
+    </table>
+    <!-- End: Bank Table  -->
+    <br><br><br>
+    <!-- Start: Overflow table  -->
+    <h1> Overflow Table</h1>
+    <div class="mark">
+        <table style="width: 1500px;">
+            <caption>Table 1.1:- Marksheet Table</caption>
+            <th rowspan="2">Enroll. No.</th>
+            <th colspan="3">Name</th>
+            <th colspan="3">Semester 1</th>
+            <th colspan="3">Semester 2</th>
+            <th colspan="3">Semester 3</th>
+            <th colspan="3">Semester 4</th>
+            <th rowspan="2">Overall Result</th>
+            <th rowspan="2">Promotion</th>
+
+            <tr>
+                <th>First Name</th>
+                <th>Middle Name</th>
+                <th>Last Name</th>
+                <th>Math</th>
+                <th>Physics</th>
+                <th>Chemistry</th>
+                <th>Math</th>
+                <th>Physics</th>
+                <th>Chemistry</th>
+                <th>Math</th>
+                <th>Physics</th>
+                <th>Chemistry</th>
+                <th>Math</th>
+                <th>Physics</th>
+                <th>Chemistry</th>
+            </tr>
+
+            <tr>
+                <td>01</td>
+                <td>Abhishek</td>
+                <td>Kishorbhai</td>
+                <td>Patel</td>
+                <td>48</td>
+                <td>44</td>
+                <td>33</td>
+                <td>47</td>
+                <td>24</td>
+                <td>49</td>
+                <td>36</td>
+                <td>34</td>
+                <td>37</td>
+                <td>37</td>
+                <td>37</td>
+                <td>37</td>
+                <td>8.5</td>
+                <td>Pass</td>
+            </tr>
+            <tr>
+                <td>02</td>
+                <td>Devansh</td>
+                <td>Ankorbhai</td>
+                <td>Patel</td>
+                <td>48</td>
+                <td>44</td>
+                <td>33</td>
+                <td>47</td>
+                <td>24</td>
+                <td>49</td>
+                <td>36</td>
+                <td>34</td>
+                <td>37</td>
+                <td>37</td>
+                <td>37</td>
+                <td>37</td>
+                <td>8.5</td>
+                <td>Pass</td>
+            </tr>
+            <tr>
+                <td>03</td>
+                <td>Chirag</td>
+                <td>Bhidubhai</td>
+                <td>Patel</td>
+                <td>48</td>
+                <td>44</td>
+                <td>33</td>
+                <td>47</td>
+                <td>24</td>
+                <td>49</td>
+                <td>36</td>
+                <td>34</td>
+                <td>37</td>
+                <td>37</td>
+                <td>37</td>
+                <td>37</td>
+                <td>3.5</td>
+                <td>Fail</td>
+            </tr>
+        </table>
+    </div>
+    <!-- End: Overflow Table  -->
 </body>
+
 </html>
