--- a/2 - Tables/index.html
+++ b/2 - Tables/index.html
@@ -15,10 +15,14 @@
             color: white;
         }
 
-        h1{
+        h1 {
             margin-left: 300px;
         }
-        table,tr,td,th{
+
+        table,
+        tr,
+        td,
+        th {
             margin: auto;
             border: 1px solid black;
             border-collapse: collapse;
@@ -26,7 +30,7 @@
             text-align: center;
         }
 
-        .mark{
+        .mark {
             width: 500px;
             margin: auto;
             overflow: auto;
@@ -59,15 +63,16 @@
     <!-- Start: Table 2 -->
     <h1> Table - 2</h1>
     <table>
-        <tr>
-            <td colspan="2" style="background-color: aqua;"></td>
-            <td rowspan="3" style="background-color: darkmagenta;"></td>
-        </tr>
-        <tr>
-            <td rowspan="2" style="background-color: chartreuse;"></td>
-            <td style="background-color: teal;"></td>
-        </tr>
-
+        <tbody>
+            <tr>
+                <td colspan="2" style="background-color: aqua;"></td>
+                <td rowspan="3" style="background-color: darkmagenta;"></td>
+            </tr>
+            <tr>
+                <td rowspan="2" style="background-color: chartreuse;"></td>
+                <td style="background-color: teal;"></td>
+            </tr>
+        </tbody>
     </table>
     <!-- End : Table 2 -->
     <br><br><br>
