--- a/3 - forms/index.html
+++ b/3 - forms/index.html
@@ -94,7 +94,7 @@
             <!-- Select Type  -->
             <div class="block">
                 <label for="country"> Country :-</label>
-                <select name="country" id="">
+                <select name="country">
                     <option value="india" selected> India</option>
                     <option value="China" > China</option>
                     <option value="canada" > Canada</option>
