--- a/6 - Parallex/index.html
+++ b/6 - Parallex/index.html
@@ -13,33 +13,69 @@
             padding: 0;
         }
 
-        body{
-            background-image: url('/assets/images/tesla.webp');
-            background-size: cover;
+        body {
+            background-image: url('/assets/images/1.PNG');
+            background-size: contain;
+            background-repeat: no-repeat;
             background-attachment: fixed;
+            background-position: center;
         }
 
-        .test{
-            height: 100vh;
-            background-image: url('/assets/images/pirate.jpg');
-            background-size: cover;
+        .test {
+            height: 130vh;
+            background-size: contain;
+            background-repeat: no-repeat;
             background-attachment: fixed;
+            background-position: center;
         }
 
-        .text{
-            margin: 1500px 0;
+        .text {
             background-color: #212121;
             color: white;
+            text-align: center;
+            font-size: 10rem;
+            margin: 100vh 0;
+        }
+
+        .main{
+            background-color: #212121;
+        
         }
     </style>
 </head>
 
 <body>
-    <div class="test">
-        <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quaerat adipisci expedita sit earum fugiat
-            ut distinctio fugit facere laborum.
-        </p>
+    <div class="main">
+        <div class="test" style="background-image: url('/assets/images/2.PNG');">
+            <p class="text">
+                Page No. 1
+            </p>
+        </div>
+        <div class="test" style="background-image: url('/assets/images/3.PNG');">
+            <p class="text">
+                Page No. 2
+            </p>
+        </div>
+        <div class="test" style="background-image: url('/assets/images/4.PNG');">
+            <p class="text">
+                Page No. 3
+            </p>
+        </div>
+        <div class="test" style="background-image: url('/assets/images/5.PNG');">
+            <p class="text">
+                Page No. 4
+            </p>
+        </div>
+        <div class="test" style="background-image: url('/assets/images/6.PNG');">
+            <p class="text">
+                Page No. 5
+            </p>
+        </div>
+        <div class="test" style="background-image: url('/assets/images/7.PNG');">
+            <p class="text">
+                Page No. 6
+            </p>
+        </div>
     </div>
 </body>
 
