--- a/SCSS Tasks/Dashboard/index.html
+++ b/SCSS Tasks/Dashboard/index.html
@@ -18,7 +18,7 @@
         
         <!-- Header Left Section  -->
         <div class="head-left d-flex align-items-center justify-content-center h-100">
-          <span class="icon-dashboard"></span>
+          <label for="toggle"><span class="icon-dashboard"></span></label>
         </div>
 
         <!-- Header Right Section  -->
@@ -29,12 +29,22 @@
             <button class="search-btn h-100 border-none"> Search </button>
           </div>
           <div class="profile d-flex justify-content-between align-items-center">
+            <span class="icon-message"><div class="notification"></div></span>
+            <span class="icon-bell"><div class="notification"></div></span>
+            <div class="profile-photo">
+              <img src="./assets/images/avatar.png" alt="Profile">
+            </div>
+            <span class="icon-toggle"></span>
+            <!-- Dropdown  -->
+          </div>
+          <label for="dropdown"><span class="icon-toggle"></span></label>
+          <input type="checkbox" id="dropdown">
+          <div class="model">
             <span class="icon-message"></span>
             <span class="icon-bell"></span>
             <div class="profile-photo">
               <img src="./assets/images/avatar.png" alt="Profile">
             </div>
-            <span class="icon-toggle"></span>
           </div>
         </div>
 
