--- a/SCSS Tasks/Practice/index.html
+++ b/SCSS Tasks/Practice/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
     <link rel="stylesheet" href="./assets/icomoon/style.css">
     <title>Practice Mockup</title>
 </head>
@@ -158,7 +158,7 @@
             <!-- End: Main-Content Section  -->
 
             <!-- Start: Status-cards Section  -->
-            <div class="status">
+            <div class="status d-flex">
 
                 <!-- Card-1  -->
                 <div class="status-box">
@@ -213,3 +213,4 @@
 
 </body>
 </html>
+
