--- a/BootstrapTasks/Dashboard Mockup/index.html
+++ b/BootstrapTasks/Dashboard Mockup/index.html
@@ -19,7 +19,7 @@
     <!-- Start: Sidebar Section  -->
     <input type="checkbox" id="toggle">
     <aside class="sidebar d-flex flex-column overflow-hidden">
-      <label for="toggle" class="sidebar-toggle ms-5 mt-3"><i class='bx bxl-meta'></i></label>
+      <label for="toggle" class="sidebar-toggle"><i class='bx bxl-meta'></i></label>
       <div class="sidebar-content d-flex flex-column justify-content-between flex-grow-1">
 
         <ul class="nav mt-5 flex-column">
@@ -61,37 +61,148 @@
     <!-- End: Sidebar Section  -->
 
     <!-- Start: Dashboard Section  -->
-    <div class="row d-flex p-5 flex-grow-1">
+    <div class="dashboard d-flex p-5 flex-grow-1">
 
       <!-- Start: Content Section  -->
-      <div class="col-9 flex-grow-1">
+      <div class="content flex-grow-1">
 
         <!-- Search Box  -->
-        <div class="search input-group">
-          <span class="input-group-text" id="basic-addon1"><i class='bx bx-search fs-5'></i></span>
-          <input type="text" class="form-control" placeholder="Search for stats" aria-label="Username" aria-describedby="basic-addon1">
+        <div class="search">
+          <div class="input-group">
+            <span class="input-group-text" id="basic-addon1"><i class='bx bx-search fs-5'></i></span>
+            <input type="text" class="form-control" placeholder="Search for stats" aria-label="Username"
+              aria-describedby="basic-addon1">
+          </div>
         </div>
 
         <!-- Dashboard Heading  -->
         <div class="content-heading d-flex justify-content-between mt-5 align-items-center">
           <div class="welcome">
             <h1> Hello Abhishek </h1>
-            <div class="text"> Welcome Back! </div>
+            <div class="text-muted"> Welcome Back! </div>
           </div>
+
+          <!-- Filter  -->
           <div class="filter">
             <div class="input-group">
-              <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" placeholder="Filter">
+              <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)"
+                placeholder="Filter">
               <span class="input-group-text"><i class='bx bx-git-repo-forked'></i></span>
             </div>
           </div>
-
-          
         </div>
+
+        <!-- Start: Card Section  -->
+        <div class="row g-4 mt-5">
+
+          <!-- Profile-Card  -->
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title">
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!--Start: Status Card  -->
+
+          <!-- Sales Card  -->
+          <div class="col-6">
+            <div class="card">
+              <div class="card-body d-flex justify-content-between align-items-center">
+                <div class="card-title">
+                  <h3 class="card-content-header"> Sales </h3>
+                  <div class="text-muted"> Total Sales Today</div>
+                  <div class="output pt-1"> $500 </div>
+                </div>
+                <div class="percent">
+                  <svg>
+                    <circle cx="50" cy="50" r="35" fill="red"></circle>
+                    <circle cx="50" cy="50" r="35" style="--percent: 55"></circle>
+                  </svg>
+                  <div class="number">
+                    <span>55<span>%</span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Profile Card  -->
+          <div class="col-6">
+            <div class="card">
+              <div class="card-body d-flex justify-content-between align-items-center">
+                <div class="card-title">
+                  <h3 class="card-content-header"> Profile </h3>
+                  <div class="text-muted"> per day radio </div>
+                  <div class="output pt-1"> $150 </div>
+                </div>
+                <div class="percent">
+                  <svg>
+                    <circle cx="50" cy="50" r="35" fill="red"></circle>
+                    <circle cx="50" cy="50" r="35" style="--percent: 30"></circle>
+                  </svg>
+                  <div class="number">
+                    <span>30<span>%</span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Order Card  -->
+          <div class="col-6">
+            <div class="card">
+              <div class="card-body d-flex justify-content-between align-items-center">
+                <div class="card-title">
+                  <h3 class="card-content-header"> Order </h3>
+                  <div class="text-muted"> Total Order Today </div>
+                  <div class="output pt-1"> $1000 </div>
+                </div>
+                <div class="percent">
+                  <svg>
+                    <circle cx="50" cy="50" r="35" fill="red"></circle>
+                    <circle cx="50" cy="50" r="35" style="--percent: 80"></circle>
+                  </svg>
+                  <div class="number">
+                    <span>80<span>%</span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Visit Card  -->
+          <div class="col-6">
+            <div class="card">
+              <div class="card-body d-flex justify-content-between align-items-center">
+                <div class="card-title">
+                  <h3 class="card-content-header"> Visits </h3>
+                  <div class="text-muted"> Total Visits Today </div>
+                  <div class="output pt-1"> $400 </div>
+                </div>
+                <div class="percent">
+                  <svg>
+                    <circle cx="50" cy="50" r="35" fill="red"></circle>
+                    <circle cx="50" cy="50" r="35" style="--percent: 70"></circle>
+                  </svg>
+                  <div class="number">
+                    <span>70<span>%</span></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <!--End: Status Card  -->
+        </div>
+        <!-- End: Card Section  -->
       </div>
       <!-- End: Content Section  -->
 
       <!-- Start: Sales Section  -->
-      <div class="col-3">
+      <div class="sales">
 
       </div>
       <!-- End: Sales Section  -->
