--- a/BootstrapTasks/Dashboard Mockup/index.html
+++ b/BootstrapTasks/Dashboard Mockup/index.html
@@ -22,7 +22,8 @@
       <label for="toggle" class="sidebar-toggle"><i class='bx bxl-meta'></i></label>
       <div class="sidebar-content d-flex flex-column justify-content-between flex-grow-1">
 
-        <ul class="nav mt-5 flex-column">
+        <!-- Menu  -->
+        <ul class="nav mt-5">
           <li class="nav-item">
             <a href="#" class="nav-link mb-4 active"><i class='bx bx-home-alt pe-3'></i> <span class="nav-text"> Home
               </span> </a>
@@ -49,7 +50,8 @@
           </li>
         </ul>
 
-        <div class="profile text-center">
+        <!-- Profile  -->
+        <div class="profile text-center mb-3">
           <div class="profile-content position-relative">
             <img class="profile-photo" src="./assets/images/23445.jpg" alt="Profile" />
             <div class="notification position-absolute"></div>
@@ -61,7 +63,7 @@
     <!-- End: Sidebar Section  -->
 
     <!-- Start: Dashboard Section  -->
-    <div class="dashboard d-flex p-5 flex-grow-1">
+    <div class="dashboard d-flex p-5 flex-grow-1 overflow-hidden">
 
       <!-- Start: Content Section  -->
       <div class="content flex-grow-1">
@@ -92,25 +94,41 @@
           </div>
         </div>
 
-        <!-- Start: Card Section  -->
-        <div class="row g-4 mt-5">
-
-          <!-- Profile-Card  -->
-          <div class="col-12">
-            <div class="card">
-              <div class="card-body">
-                <div class="card-title">
-
-                </div>
+        <!-- Status Board -->
+        <div class="row g-4 mt-2">
+          <div class="status-board d-flex px-5 py-3">
+            <div class="col-4">
+              <div class="card-content">
+                <i class='bx bxs-color mb-3'></i>
+                <div class="text-muted"> Views </div>
+                <div class="card-num"> 500 </div>
+                <div class="text-muted"> Per day </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-content">
+                <i class='bx bx-compass mb-3'></i>
+                <div class="text-muted"> Views </div>
+                <div class="card-num"> 500 </div>
+                <div class="text-muted"> Per day </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-content">
+                <i class='bx bx-store mb-3'></i>
+                <div class="text-muted"> Views </div>
+                <div class="card-num"> 500 </div>
+                <div class="text-muted"> Per day </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <!--Start: Status Card  -->
-
+        <!--Start: Status Card  -->
+        <div class="row g-4 mt-3">
           <!-- Sales Card  -->
-          <div class="col-6">
-            <div class="card">
+          <div class="col col-xxl-6">
+            <div class="card card-sales">
               <div class="card-body d-flex justify-content-between align-items-center">
                 <div class="card-title">
                   <h3 class="card-content-header"> Sales </h3>
@@ -129,9 +147,9 @@
               </div>
             </div>
           </div>
-          <!-- Profile Card  -->
-          <div class="col-6">
-            <div class="card">
+          <!-- Profit Card  -->
+          <div class="col col-xxl-6">
+            <div class="card card-profit">
               <div class="card-body d-flex justify-content-between align-items-center">
                 <div class="card-title">
                   <h3 class="card-content-header"> Profile </h3>
@@ -151,8 +169,8 @@
             </div>
           </div>
           <!-- Order Card  -->
-          <div class="col-6">
-            <div class="card">
+          <div class="col col-xxl-6">
+            <div class="card card-order">
               <div class="card-body d-flex justify-content-between align-items-center">
                 <div class="card-title">
                   <h3 class="card-content-header"> Order </h3>
@@ -172,8 +190,8 @@
             </div>
           </div>
           <!-- Visit Card  -->
-          <div class="col-6">
-            <div class="card">
+          <div class="col col-xxl-6">
+            <div class="card card-views">
               <div class="card-body d-flex justify-content-between align-items-center">
                 <div class="card-title">
                   <h3 class="card-content-header"> Visits </h3>
@@ -192,22 +210,56 @@
               </div>
             </div>
           </div>
-
-
-
           <!--End: Status Card  -->
         </div>
         <!-- End: Card Section  -->
       </div>
       <!-- End: Content Section  -->
 
-      <!-- Start: Sales Section  -->
-      <div class="sales">
-
+      <!-- Start: Revenue Section  -->
+      <div class="revenue p-5 overflow-auto">
+        <h4 class="revenue-heading text-white mb-5"> Sales Revenue </h4>
+        <div class="revenue-card d-flex align-items-center justify-content-between mb-5">
+          <div class="revenue-icon">
+            <i class='bx bx-cog p-2'></i>
+          </div>
+          <div class="revenue-card-content">
+            <div class="value text-white"> 230K </div>
+            <div class="text-muted revenue-text"> Sales </div>
+          </div>
+        </div>
+        <div class="revenue-card d-flex align-items-center justify-content-between mb-5">
+          <div class="revenue-icon">
+            <i class='bx bx-user-circle p-2'></i>
+          </div>
+          <div class="revenue-card-content">
+            <div class="value text-white"> 230K </div>
+            <div class="text-muted revenue-text"> Customers </div>
+          </div>
+        </div>
+        <div class="revenue-card d-flex align-items-center justify-content-between mb-5">
+          <div class="revenue-icon">
+            <i class='bx bx-layout p-2'></i>
+          </div>
+          <div class="revenue-card-content">
+            <div class="value text-white"> 230K </div>
+            <div class="text-muted revenue-text"> Products </div>
+          </div>
+        </div>
+        <div class="revenue-card d-flex align-items-center justify-content-between mb-5">
+          <div class="revenue-icon">
+            <i class='bx bxs-pie-chart-alt p-2'></i>
+          </div>
+          <div class="revenue-card-content">
+            <div class="value text-white"> 230K </div>
+            <div class="text-muted revenue-text"> Revenue </div>
+          </div>
+        </div>
       </div>
-      <!-- End: Sales Section  -->
     </div>
-    <!-- End: Dashboard Section  -->
+    <!-- End: Revenue Section  -->
+  </div>
+  <!-- End: Dashboard Section  -->
   </div>
   <!-- End: Wrapper Section  -->
 </body>
